--- a/mchurner/pom.xml
+++ b/mchurner/pom.xml
@@ -12,6 +12,7 @@
     <servlet.version>3.1.0</servlet.version>
     <servlet.version>3.0.1</servlet.version>
     <mysql.connector.version>5.1.9</mysql.connector.version>
+    <jersey.version>2.25.1</jersey.version>
   </properties>
 	<dependencies>
 	    <!-- Junit -->
@@ -76,6 +77,17 @@
 	        <artifactId>mysql-connector-java</artifactId>
 	        <version>${mysql.connector.version}</version>
 	    </dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
 	</dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
