--- a/mchurner/pom.xml
+++ b/mchurner/pom.xml
@@ -7,9 +7,10 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.3.2.RELEASE</spring.version>
+    <spring.security.version>4.2.7.RELEASE</spring.security.version>
     <log4j.version>1.2.17</log4j.version>
     <junit.version>4.12</junit.version>
-    <servlet.version>3.1.0</servlet.version>
+    <!-- <servlet.version>3.1.0</servlet.version> -->
     <servlet.version>3.0.1</servlet.version>
     <mysql.connector.version>5.1.9</mysql.connector.version>
     <jersey.version>2.25.1</jersey.version>
@@ -65,12 +66,16 @@
 	        <artifactId>spring-webmvc</artifactId>
 	        <version>${spring.version}</version>
 	    </dependency>
-	    <!-- Servlet API -->
 	    <dependency>
-	        <groupId>javax.servlet</groupId>
-	        <artifactId>javax.servlet-api</artifactId>
-	        <version>${servlet.version}</version>
-	    </dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
 	    <!-- MySQL database driver -->
 	    <dependency>
 	        <groupId>mysql</groupId>
